--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,20 @@
 :root {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-main-accent: #8338ec;
+  --color-second-accent: #4cc9f0;
+  --color-main-light: #e9ecef;
+  --color-main-medium: #adb5bd;
+  --color-main-dark: #343a40;
+
+  --font-size-small: 12px;
+  --font-size-medium: 16px;
+  --font-size-big: 24px;
+
+  --font-weight-regular: 400;
+  --font-weight-normal: 500;
+  --font-weight-bold: 700;
+
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
