--- a/app/page.module.css
+++ b/app/page.module.css
@@ -31,11 +31,12 @@
 .container {
   width: 100%;
   min-height: 50px;
+  max-width: 800px;
 }
 
 .field {
   box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1);
   border: 2px solid #8338ec;
-  padding: 0;
+  padding: 5px;
   font-size: 15px;
 }
